@@ -24,6 +24,7 @@ Version 1.3.15+svn:
    * Removed broken "Host network game" option from multiplayer menu (bug #10800)
    * Fixed network game creation return back to create dialog after failed
      savegame loading
+   * Fixed a small glitch with fog and shroud in the corners (bug #10831)
  * miscellaneous and bug fixes:
    * Fixed networking not to timeout with slow connections but timeout faster
      with lost connection (partialy fix bug #10967)
